force-app/main/default/objects/ARTL_Legal_Entity__mdt/ARTL_Legal_Entity__mdt.object-meta.xml
<CustomObject>
    <label>Legal Entity</label>
    <pluralLabel>Legal Entities</pluralLabel>
</CustomObject>