force-app/main/default/objects/ARTL_Legal_Entity__mdt/fields/ARTL_Legal_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity_Code__c</fullName>
    <label>Legal Entity Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>