force-app/main/default/objects/ARTL_Legal_Entity__mdt/fields/ARTL_Product__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Product__c</fullName>
    <label>Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>