force-app/main/default/objects/ARTL_Legal_Entity__mdt/listViews/ARTL_View.listView-meta.xml
<ListView>
    <fullName>ARTL_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ARTL_Product__c</columns>
    <columns>ARTL_Legal_Entity__c</columns>
    <columns>ARTL_Legal_Entity_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>ARTL View</label>
</ListView>